--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 	},
 	"engines": {
 		"node": ">=14.19.1 <=18.x.x",
-		"npm": ">=6.x.x",
+		"npm": "8.11.0",
 		"yarn": "1.x"
 	},
 	"license": "MIT"
